welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
      leveBrosse()
                ^SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
    else {recule();gauche()}
                         ^