welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if(!estFaceMur()){
    avance()
    if(getCouleurSol()==Color.green){
      baisseBrosse()
      leveBrosse()
    }
    else {recule();gauche()}
  }
  else{return(false)}
}